--- a/flask-https-server/templates/activate_api_key.html
+++ b/flask-https-server/templates/activate_api_key.html
@@ -29,6 +29,7 @@
             <input type="text" id="api_key" name="api_key" required>
             <br>
             <input type="submit" value="Activate API Key">
+            <input type="hidden" id="csrf_token" name="csrf_token" value="{{csrf_token}}">
         </form>
         <div>
             <div><div>Response:</div><div id="response"></div></div>
@@ -41,6 +42,7 @@
                 event.preventDefault();
 
                 var formData = {
+                    "csrf_token": $("#csrf_token").val(),
                     "api_key": $("#api_key").val(),
                     "lan_ip_address": "test",
                     "remote_ip_address": "test",
