--- a/flask-https-server/templates/add_user_license.html
+++ b/flask-https-server/templates/add_user_license.html
@@ -29,6 +29,7 @@
             <input type="text" id="license_name" name="license_name" required>
             <br>
             <input type="submit" value="Request License">
+            <input type="hidden" id="csrf_token" name="csrf_token" value="{{csrf_token}}">
         </form>
         <div id="response"></div>
     </div>
@@ -39,7 +40,8 @@
                 event.preventDefault();
 
                 var formData = {
-                    "license_name": $("#license_name").val()
+                    "license_name": $("#license_name").val(),
+                    "csrf_token": $("#csrf_token").val()
                 };
 
                 $.ajax({
